--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
     "geist": "^1.3.0",
+    "js-cookie": "^3.0.5",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
