--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "postinstall": "prisma generate",
@@ -27,6 +27,7 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "@types/ws": "^8.5.14",
     "geist": "^1.3.0",
     "js-cookie": "^3.0.5",
     "next": "^15.0.1",
@@ -35,6 +36,7 @@
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "unique-names-generator": "^4.7.1",
+    "ws": "^8.18.1",
     "zod": "^3.23.3"
   },
   "devDependencies": {
